--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -5,7 +5,7 @@
   "song": {
     "comment_count": "No comments | 1 comment | {count} comments"
   },
-  "manage": {
+  "profile": {
     "my_songs": "My Songs"
   },
   "components": {
@@ -14,5 +14,11 @@
   "register": {
     "accept": "I accept Music's {0}",
     "tos": "Terms of Service"
+  },
+  "header": {
+    "profile": "Profile",
+    "about": "About",
+    "logout": "Logout",
+    "upload": "Upload"
   }
 }
