--- a/src/locales/zhTw.json
+++ b/src/locales/zhTw.json
@@ -5,7 +5,7 @@
   "song": {
     "comment_count": "尚無評論 | 1 則評論 | {count} 則評論"
   },
-  "manage": {
+  "profile": {
     "my_songs": "我的曲目"
   },
   "components": {
@@ -14,5 +14,11 @@
   "register": {
     "accept": "我接受 {0}",
     "tos": "各項條款"
+  },
+  "header": {
+    "profile": "個人檔案",
+    "about": "關於我們",
+    "logout": "登出",
+    "upload": "上傳"
   }
 }
