style: locale & scroll top

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -17,7 +17,7 @@
   },
   "header": {
     "profile": "Profile",
-    "about": "About",
+    "about": "About Us",
     "logout": "Logout",
     "upload": "Upload"
   }
