--- a/src/locales/zhTw.json
+++ b/src/locales/zhTw.json
@@ -11,14 +11,25 @@
   "components": {
     "upload": "上傳"
   },
-  "register": {
+  "authModal": {
+    "name": "你的名字",
+    "email": "你的信箱",
+    "age": "你的年齡",
+    "password": "你的密碼",
+    "confirmPassword": "確認你的密碼",
+    "country": "你的國家",
+    "submit": "送出",
     "accept": "我接受 {0}",
-    "tos": "各項條款"
+    "tos": "各項條款",
+    "yourAccount": "你的帳戶"
   },
   "header": {
     "profile": "個人檔案",
     "about": "關於我們",
+    "login": "登入",
     "logout": "登出",
-    "upload": "上傳"
+    "register": "註冊",
+    "upload": "上傳",
+    "login_register": "登入 / 註冊"
   }
 }
