chore: updating grunt tasks & testing

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -32,10 +32,9 @@
     "age": "Age",
     "password": "Password",
     "confirmPassword": "Confirm Password",
-    "country": "Country",
     "description": "Description",
     "submit": "Submit",
-    "accept": "I accept Music's {0}",
+    "accept": "I accept VoiceVerse's {0}",
     "tos": "Terms of Service",
     "yourAccount": "Your Account"
   },
